# dotfiles

./: .gitignore  .marksman.toml.template  README.md  README.org  TMUX_CONTROL_MODE.md  VSCODE_NVIM_CHANGES.md  VSCODE_NVIM_SETUP.md  bashrc.org  explore_tmux_control_mode.py  explore_tmux_control_mode_advanced.py  install.py  kmonad.org  pyrightconfig.json  test_tmux_client.lua  tmux_monitor_example.py  xinit.org
.cursor/commands/: configure-nvim.md
abduco/: README.md  install.sh
awesomewm/: rc.org
bob/: install.py
brew/: base-utils.sh
cht.sh/: cht.lua  install.sh
emacs/: emacs.org
images/Ubuntu/: .dockerignore  Dockerfile
karabiner/: install.py  karabiner.json
lazygit/: install.py
nvim/: init.lua  install.py  lazy-lock.json
nvim/after/ftplugin/: sh.lua
nvim/after/plugin/: cht.lua  custom-pickers.lua
nvim/lsp/: gopls.lua  lua-ls.lua  marksman.lua  typescript-language-server.lua
nvim/lua/config/: lazy.lua
nvim/lua/plugins/: amazonq.lua  autocomplete.lua  colorscheme.lua  harpoon.lua  java.lua  lazydev.lua  lspconfig.lua  luasnip.lua  (+10 more)
python/fencing/: pyproject.toml
python/fencing/fencing/: __init__.py
python/installman/: pyproject.toml
python/installman/installman/: __init__.py
python/installman/installman.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qtile/: config.org
rust/: crates.sh  install.sh  rust-config.zsh
ssh/: install.py  multiplexing
tmux/: default-tmux-command.sh  install.py  shell_functions.sh  tmux.conf
zoxide/: init.sh  install.py
zsh/: aliases.sh  bin_wrappers.sh  completions.sh  install.py  keybinds.sh
(+16 files in other folders)
